--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "immer": "^9.0.5",
     "lint-staged": "^11.0.0",
     "lodash": "^4.17.21",
+    "navi": "^0.14.0",
     "prettier": "^2.3.2",
     "pusher-js": "^7.0.3",
     "react": "^17.0.2",
@@ -49,8 +50,8 @@
     "react-hook-form": "^7.13.0",
     "react-icons": "^4.2.0",
     "react-intl": "^5.18.1",
+    "react-navi": "^0.14.4",
     "react-pro-sidebar": "^0.6.0",
-    "react-router-dom": "^5.2.0",
     "react-select": "^4.3.1",
     "react-table": "^7.7.0",
     "rollup-plugin-uglify": "^6.0.4",
