--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "navi": "^0.14.0",
     "prettier": "^2.3.2",
     "pusher-js": "^7.0.3",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-countdown-hook": "^1.1.0",
     "react-dom": "^17.0.0",
