--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
     "@typescript-eslint/no-empty-function": "warn",
     "no-console": "warn",
     "react/prop-types": "off",
+    "@typescript-eslint/no-unused-vars": "error",
     "prettier/prettier": [
       "warn",
       {
