--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "immer": "^9.0.5",
     "lint-staged": "^11.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "navi": "^0.14.0",
     "prettier": "^2.3.2",
     "pusher-js": "^7.0.3",
