--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-countdown-hook": "^1.1.0",
     "react-dom": "^17.0.0",
     "react-file-drop": "^3.1.2",
+    "react-file-viewer": "^1.2.1",
     "react-google-recaptcha": "^2.1.0",
     "react-highlight-words": "^0.17.0",
     "react-hook-form": "7.14.0",
