--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "css-in-js-media": "^2.0.1",
     "date-fns": "^2.22.1",
     "framer-motion": "^4",
     "husky": "^6.0.0",
@@ -59,6 +60,7 @@
     "react-select": "^4.3.1",
     "react-table": "^7.7.0",
     "rollup-plugin-uglify": "^6.0.4",
+    "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "vite": "^2.5.3",
     "vite-aliases": "^0.6.3",
