--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-hook-form": "7.14.0",
     "react-icons": "^4.2.0",
     "react-intl": "^5.18.1",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-navi": "^0.14.4",
     "react-pro-sidebar": "^0.6.0",
     "react-query": "^3.26.0",
