--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "typescript": "^4.1.2",
     "vite": "^2.5.3",
     "vite-aliases": "^0.6.3",
+    "yarn": "^1.22.17",
     "yup": "^0.32.9",
     "zustand": "^3.5.1"
   },
