--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fontsource/lato": "^4.5.0",
     "@hookform/resolvers": "^2.8.0",
     "@rollup/plugin-image": "^2.0.6",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "@types/node": "^16.6.2",
     "@types/react-select": "^4.0.17",
     "@vitejs/plugin-react-refresh": "^1.3.6",
