--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "classnames": "^2.3.1",
     "css-in-js-media": "^2.0.1",
     "date-fns": "^2.22.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^4",
     "husky": "^6.0.0",
     "immer": "^9.0.5",
+    "js-file-download": "^0.4.12",
     "lint-staged": "^11.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
