--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@emotion/styled": "^11",
     "@fontsource/lato": "^4.5.0",
     "@hookform/resolvers": "^2.8.0",
+    "@react-pdf-viewer/core": "2.10.1",
+    "@react-pdf-viewer/default-layout": "^2.10.1",
     "@rollup/plugin-image": "^2.0.6",
     "@trendmicro/react-sidenav": "^0.5.0",
     "@types/node": "^16.6.2",
@@ -45,6 +47,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "navi": "^0.14.0",
+    "pdfjs-dist": "2.6.347",
     "prettier": "^2.3.2",
     "pusher-js": "^7.0.3",
     "query-string": "^7.0.1",
