--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.15",
-    "@chakra-ui/react": "^1.6.7",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
+    "@chakra-ui/react": "1.6.12",
+    "@emotion/react": "11.5.0",
+    "@emotion/styled": "11.3.0",
     "@fontsource/lato": "^4.5.0",
     "@hookform/resolvers": "^2.8.0",
     "@react-pdf-viewer/core": "2.10.1",
@@ -39,7 +39,7 @@
     "css-in-js-media": "^2.0.1",
     "date-fns": "^2.22.1",
     "file-saver": "^2.0.5",
-    "framer-motion": "^4",
+    "framer-motion": "5.2.1",
     "husky": "^6.0.0",
     "immer": "^9.0.5",
     "js-file-download": "^0.4.12",
