--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "*": "prettier -w -u"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.15",
-    "@chakra-ui/react": "1.6.12",
-    "@emotion/react": "11.5.0",
-    "@emotion/styled": "11.3.0",
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "1.7.2",
+    "@emotion/react": "11.6.0",
+    "@emotion/styled": "11.6.0",
     "@fontsource/lato": "^4.5.0",
     "@hookform/resolvers": "^2.8.0",
-    "@react-pdf-viewer/core": "2.10.1",
-    "@react-pdf-viewer/default-layout": "^2.10.1",
+    "@react-pdf-viewer/core": "^2.11.0",
+    "@react-pdf-viewer/default-layout": "^2.11.0",
     "@rollup/plugin-image": "^2.0.6",
     "@trendmicro/react-sidenav": "^0.5.0",
     "@types/node": "^16.6.2",
@@ -39,7 +39,7 @@
     "css-in-js-media": "^2.0.1",
     "date-fns": "^2.22.1",
     "file-saver": "^2.0.5",
-    "framer-motion": "5.2.1",
+    "framer-motion": "5.3.0",
     "husky": "^6.0.0",
     "immer": "^9.0.5",
     "js-file-download": "^0.4.12",
@@ -59,7 +59,7 @@
     "react-file-viewer": "^1.2.1",
     "react-google-recaptcha": "^2.1.0",
     "react-highlight-words": "^0.17.0",
-    "react-hook-form": "7.14.0",
+    "react-hook-form": "7.13.0",
     "react-icons": "^4.2.0",
     "react-intl": "^5.18.1",
     "react-modern-calendar-datepicker": "^3.1.6",
