--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "pusher-js": "^7.0.3",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-avatar-editor": "^12.0.0",
     "react-checkbox-tree": "^1.7.2",
     "react-countdown-hook": "^1.1.0",
     "react-dom": "^17.0.0",
