--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-query": "^3.26.0",
     "react-select": "^4.3.1",
     "react-table": "^7.7.0",
+    "react-to-pdf": "^0.0.14",
     "rollup-plugin-uglify": "^6.0.4",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
