--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^17.0.2",
     "react-avatar-editor": "^12.0.0",
     "react-checkbox-tree": "^1.7.2",
+    "react-color": "^2.19.3",
     "react-countdown-hook": "^1.1.0",
     "react-dom": "^17.0.0",
     "react-file-drop": "^3.1.2",
